--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	<!-- If data transition is none there is no load time due to only one HTML page having to load -->
 		
 		<div data-role="main" class="ui-content">
-			<h1>Hello World.</h1>
-			<p>Welcome to my first page.</p>
+			<h1>Leif E. Hetland</h1>
+			<p>I have been fascinated with society's relationship with technology. My goal is to create digital experiences that entertain and connect people.</p>
 			
 			<div data-role="collapsible">
 				<h1>Experience</h1>
